# LuisaCompute

./: .gitignore  xmake.lua
src/backends/: CMakeLists.txt
src/backends/common/: CMakeLists.txt  command_reorder_visitor.cpp  command_reorder_visitor.h  command_reorder_visitor.hpp
src/backends/cuda/: cuda_accel.cpp  cuda_accel.h  cuda_codegen.cpp  cuda_compiler.cpp  cuda_compiler.h  cuda_device.cpp  cuda_device.h  cuda_mesh.cpp  cuda_mesh.h  cuda_shader.cpp
src/backends/dx/: .clang-format  CMakeLists.txt  backup.7z  d3dx12.h  test_compute.h  test_rtx.h  xmake.lua
src/backends/dx/Api/: LCCmdBuffer.cpp  LCCmdBuffer.h  LCDevice.cpp  LCDevice.h  LCEvent.cpp  LCSwapChain.cpp  LCUtil.cpp  LCUtil.h
src/backends/dx/DXRuntime/: CommandAllocator.cpp  CommandAllocator.h  CommandAllocatorBase.h  CommandBuffer.cpp  CommandBuffer.h  CommandQueue.cpp  CommandQueue.h  Device.cpp  Device.h  EnhancedBarrierTracker.cpp.backup  EnhancedBarrierTracker.h.backup  GlobalSamplers.cpp  ResourceStateTracker.cpp  ResourceStateTracker.h  ShaderPaths.h
src/backends/dx/HLSL/: codegen_stack_data.cpp  codegen_stack_data.h  dx_codegen.cpp  dx_codegen.h  dx_codegen_util.cpp  shader_header.cpp  shader_header.h  struct_generator.cpp  struct_generator.h
src/backends/dx/Resource/: BindProperty.h  BindlessArray.cpp  BindlessArray.h  BottomAccel.cpp  BottomAccel.h  Buffer.cpp  BufferView.h  DefaultBuffer.cpp  DefaultBuffer.h  DepthBuffer.cpp  DepthBuffer.h  DescriptorHeap.cpp  DescriptorHeap.h  IGpuAllocator.cpp  IGpuAllocator.h  ReadbackBuffer.cpp  ReadbackBuffer.h  RenderTexture.cpp  RenderTexture.h  Resource.cpp  Resource.h  TextureBase.cpp  TextureBase.h  TopAccel.cpp  TopAccel.h  UploadBuffer.cpp  UploadBuffer.h
src/backends/dx/Shader/: BuiltinKernel.cpp  BuiltinKernel.h  CommandSignature.cpp  CommandSignature.h  ComputeShader.cpp  ComputeShader.h  RTShader.cpp  RTShader.cpp.backup  RTShader.h.backup  RasterShader.cpp  RasterShader.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderSerializer.cpp  ShaderSerializer.h  ShaderVariableType.h
src/backends/dx/dx_builtin/: hlsl_header
src/backends/dx/serialize/: DatabaseInclude.h  IJsonObject.h  SimpleBinaryJson.cpp  SimpleBinaryJson.h  SimpleJsonLoader.cpp  SimpleJsonLoader.h  SimpleJsonObject.h  SimpleJsonValue.cpp  SimpleJsonValue.h  SimpleParser.cpp  array_iostream.h  ast_deser.cpp  ast_ser.cpp  ast_serde.h  astserializer.cpp  cmd_deser.cpp  cmd_deser.h  cmd_ser.cpp  cmd_ser.h  cmd_serde.h  device_deser.cpp  device_deser.h  device_ser.cpp  device_ser.h  ser_tag.h  serialize.h  socket_visitor.h
src/backends/ispc/: ispc_accel.cpp  ispc_accel.h  ispc_codegen.cpp  ispc_codegen.h  ispc_device.cpp  ispc_device.h  ispc_mesh.cpp  ispc_mesh.h  ispc_shader.cpp
src/backends/llvm/: llvm_accel.cpp  llvm_accel.h  llvm_device.cpp  llvm_device.h  llvm_mesh.cpp  llvm_mesh.h
src/backends/metal/: metal_accel.h  metal_accel.mm  metal_codegen.mm  metal_command_encoder.mm  metal_compiler.h  metal_device.h  metal_device.mm  metal_mesh.h  metal_mesh.mm
src/backends/vk/: CMakeLists.txt  HelloTriangleApplication.h  lc_entry.cpp  main.cpp  main.hpp  rt_miss_closest  spirv_backup.7z  vulkan_include.h  vulkan_initializer.hpp  xmake.lua
src/backends/vk/components/: device.cpp  device.h  resource.h
src/backends/vk/dxc/: dxc_util.cpp  dxc_util.h  dxcapi.h
src/backends/vk/gpu_allocator/: gpu_allocator.cpp  gpu_allocator.h  vk_mem_alloc.cpp  vk_mem_alloc.h  vk_memalloc_tutorial.txt  vma_buffer.h  vma_image.h
src/backends/vk/gpu_collection/: bindless_array.cpp  bindless_array.h  buffer.cpp  buffer.h  gpu_collection.h  texture.cpp  texture.h
src/backends/vk/hlsl/: hlsl_closest.hlsl  hlsl_miss.hlsl  while_loop.spvasm
src/backends/vk/lc_api/: lc_device.cpp  lc_device.h  lc_stream.cpp  lc_stream.h  uniform_pack.cpp  uniform_pack.h
src/backends/vk/shader/: compute_shader.cpp  compute_shader.h  descriptor_pool.cpp  descriptor_pool.h  descriptorset_manager.cpp  descriptorset_manager.h  i_shader.h  pipeline_cache.cpp  pipeline_cache.h  pipeline_layout.cpp  pipeline_layout.h  rt_shader.cpp  rt_shader.h  shader_code.cpp  shader_code.h
src/backends/vk/spirv-tools/: libspirv.h  libspirv.hpp  linker.hpp  optimizer.hpp  spv_include.h
src/backends/vk/spv/ast/: visitor.h  (+1 more)
src/backends/vk/spv_example/: sample_tex.spvasm
src/backends/vk/ve_shaderc/: env.h  shaderc.h  shaderc.hpp  visibility.h
src/backends/vk/vk_rtx/: accel.cpp  accel.h  build_info.h  mesh.cpp  mesh.h  mesh_handle.cpp  mesh_handle.h  query.cpp  query.h
src/backends/vk/vk_runtime/: command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  event.cpp  event.h  frame_resource.cpp  frame_resource.h  render_pipeline.cpp  render_pipeline.h  res_state_tracker.cpp  res_state_tracker.h
src/backends/vk/vk_types/: bind_desriptor.h  buffer_view.h  tex_view.h
src/backends/vk/vk_utility/: shader_utility.cpp  shader_utility.h
src/backends/vk/vulkan/: vulkan.hpp  vulkan_profiles.hpp
src/compile/: CMakeLists.txt  codegen.cpp  cpp_codegen.cpp  definition_analysis.h  xmake.lua
src/compile/hlsl/: codegen_stack_data.cpp  codegen_stack_data.h  dx_codegen.cpp  dx_codegen.h  dx_codegen_util.cpp  shader_header.cpp  shader_header.h  shader_property.h  struct_generator.cpp  struct_generator.h
src/core/: CMakeLists.txt  binary_buffer.h  binary_io.h  binary_io_visitor.h  dll_export.h  dynamic_module.cpp  dynamic_module.h  file_io.h  first_fit.h  json.h  json_fwd.h  logging.cpp  logging.h  lru_cache.h  observer.h  platform.cpp  platform.h  pool.h  stl.cpp  stl.h  thread_pool.cpp  thread_pool.h  xmake.lua
src/core/stl/: bit.h  fixed_collection.h  fixed_map.h  format.h  functional.h  hash.h  list.h  lru_cache.h  map.h  memory.h  optional.h  ordered_map.h  priority_queue.h  queue.h  shared_array.h  smart_ptr.h  string.h  unordered_map.h  variant.h  vector.h  vector_map.h
src/ext/: CMakeLists.txt
src/raster/: CMakeLists.txt  depth_buffer.h  dsl.h  indirect_buffer.cpp  indirect_buffer.h  raster.cpp  raster_kernel.h  raster_scene.h  raster_shader.h  raster_state.h  vertex_attribute.h  xmake.lua
(+366 files in other folders)
